# MemPoolforWebserver

./: CMakeLists.txt  README.md  main.cpp
include/: HttpData.h  MemoryPool.h
src/: HttpData.cpp  MemoryPool.cpp
